Conexion base de datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=ligabetplay
+spring.datasource.url=jdbc:postgresql://localhost:5432/ligabetplay
+spring.datasource.username=betplay
+spring.datasource.password=1234betplay
+spring.datasource.driver-class-name=org.postgresql.Driver
